[package]
name = "piarch-a-token-rs"
version = "0.1.0"
authors = ["doga <dogabudak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
async-std = "1.9.0"
once_cell = "1.7.2"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "2.0.0-alpha.1"
default-features = false
features = ["sync"]
